Fixed mobile layout breaking

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -859,6 +859,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
